--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,6 @@
         <logback.version>1.2.3</logback.version>
         <slf4j.version>1.7.25</slf4j.version>
     </properties>
-
     <dependencies>
         <dependency>
             <groupId>org.scala-lang</groupId>
@@ -40,11 +39,59 @@
             <artifactId>logback-classic</artifactId>
             <version>${logback.version}</version>
         </dependency>
-
+        <!--akka-->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-actor_2.12</artifactId>
             <version>2.5.9</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http_2.12</artifactId>
+            <version>10.1.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream_2.12</artifactId>
+            <version>2.5.8</version> <!-- Or whatever the latest version is -->
+        </dependency>
+        <!--Integrates ScalaTest into Maven-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-maven-plugin</artifactId>
+            <version>2.0.0</version>
+        </dependency>
+        <!--ScalaTest-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.11</artifactId>
+            <version>3.0.4</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_2.12</artifactId>
+            <version>2.5.9</version>
+            <scope>test</scope>
+        </dependency>
+        <!--Mock objects library for java-->
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-all</artifactId>
+            <version>1.10.19</version>
+            <scope>test</scope>
+        </dependency>
+        <!--scalatestMockito-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-jmock_2.11</artifactId>
+            <version>3.0.0-SNAP13</version>
+        </dependency>
+        <!--scalatestEasyMock-->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest-easymock_2.11</artifactId>
+            <version>3.0.0-SNAP13</version>
         </dependency>
     </dependencies>
 
