--- a/pom.xml
+++ b/pom.xml
@@ -47,13 +47,41 @@
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-testkit_2.12</artifactId>
+            <version>2.5.9</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-http_2.12</artifactId>
-            <version>10.1.0-RC1</version>
+            <version>10.0.11</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-testkit_2.12</artifactId>
+            <version>10.0.11</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-stream_2.12</artifactId>
             <version>2.5.8</version> <!-- Or whatever the latest version is -->
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-stream-testkit_2.12</artifactId>
+            <version>2.5.8</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-spray-json_2.12</artifactId>
+            <version>10.1.0-RC1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.typesafe.akka</groupId>
+            <artifactId>akka-http-xml_2.12</artifactId>
+            <version>10.1.0-RC1</version>
         </dependency>
         <!--*************************************************-->
         <!--Integrates ScalaTest into Maven-->
@@ -69,24 +97,11 @@
             <version>3.0.4</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-testkit_2.12</artifactId>
-            <version>2.5.9</version>
-            <scope>test</scope>
-        </dependency>
         <!--Mock objects library for java-->
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-all</artifactId>
             <version>1.10.19</version>
-            <scope>test</scope>
-        </dependency>
-        <!-- http://scalamock.org/ -->
-        <dependency>
-            <groupId>org.scalamock</groupId>
-            <artifactId>scalamock_2.12</artifactId>
-            <version>4.0.0</version>
             <scope>test</scope>
         </dependency>
 
