--- a/src/test/resources/application.conf
+++ b/src/test/resources/application.conf
@@ -1,5 +1,5 @@
 akka {
-  loglevel = DEBUG
+  loglevel = INFO
   event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
 }
 
@@ -11,7 +11,7 @@ service {
 RPS {
   default {
     graceRps = 10
-    rps = 2
+    rps = 100
     env = "dev"
   }
 }
